--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,5 +5,7 @@
 	fedup = reset HEAD --hard
 	unstage = reset HEAD --
 	last = log -1 HEAD
+	graph = log --oneline --graph --all --decorate
+	lg1 = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
 [core]
 	editor = vim
